--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,7 @@
                 <th scope="col">Full Name</th>
                 <th scope="col">Designation</th>
                 <th scope="col">Phone Number</th>
+                <th>Action</th>
               </tr>
             </thead>
             <tbody>
@@ -27,9 +28,10 @@
               {% for emp in employess %}
                 <tr>
                   <th>{{ forloop.counter }}</th>
-                  <td><a href="{% url 'employee_detail' emp.id %}">{{ emp.first_name }} {{emp.last_name}}</a></td>
+                  <td>{{ emp.first_name }} {{emp.last_name}}</td>
                   <td>{{ emp.designation }}</td>
                   <td>{{ emp.phono_number }}</td>
+                  <td><a href="{% url 'employee_detail' emp.id %}">View</a></td>
                 </tr>
               {% endfor %}
           </table>
